--- a/style.css
+++ b/style.css
@@ -216,11 +216,12 @@ p {
 
     .one, .history, .subflex {
         display: flex;
+        flex-wrap: wrap;
     }
 
     .hispic, .hispic1 {
-        width: 200px;
-        height: 100px;
+        width: 250px;
+        height: 150px;
     }
 }
     
