--- a/style.css
+++ b/style.css
@@ -177,12 +177,12 @@ p {
     }
 
     .name {
-        margin-left: 0.35em;
+        margin-left: 1em;
         margin-right: 2em;
     }
 
     .subpic {
-        /* margin-left: 5.5em; */
+        margin-left: 5.5em;
         padding: 2em;
         margin: 1em;
     }
@@ -203,6 +203,7 @@ p {
 
     .subpic {
         padding-left: 3.5em;
+        margin-bottom: 2em;
     }
 
     .intropic {
@@ -222,8 +223,9 @@ p {
     }
 
     .hispic, .hispic1 {
-        width: 80px;
-        height: 60px;
+        width: 150px;
+        height: 130px;
+        padding-top: 3em;
     }
 }
     
