--- a/style.css
+++ b/style.css
@@ -120,9 +120,9 @@ h5 {
     margin: 1em; */
 }
 
-.subflex {
-    /* display: flex; */
-}
+/* .subflex {
+    display: flex;
+} */
 
 .history {
     background-color: #ccd5ae;
@@ -196,10 +196,10 @@ p {
 }
 
 @media screen and (min-width: 600px) {
-    body {
-        /* display: flex;
-        flex-wrap: nowrap; */
-    }
+    /* body {
+        display: flex;
+        flex-wrap: nowrap;
+    } */
 
     .subpic {
         padding-left: 3.5em;
